k8s/disabled/soulseek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulseek
  namespace: soulseek
  labels:
    app: "soulseek"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.100.253
  ports:
    - name: http
      port: 6080
      targetPort: 6080
    - name: listening
      port: 61122
      targetPort: 61122
    - name: obfuscated
      port: 61123
      targetPort: 61123
  selector:
    app: soulseek
